<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_content_description"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/release_dateLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/ratingLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/favouriteBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/star_hollow"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailerLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textSize="32sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:id="@+id/trailersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:orientation="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reviewLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textSize="32sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:id="@+id/reviewsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>